added prometheus-blackbox-exporter helm chart and deployed monitoring dashboards (#889)

--- a/deploy-as-code/helm/charts/backbone-services/prometheus-kafka-exporter/values.yaml
+++ b/deploy-as-code/helm/charts/backbone-services/prometheus-kafka-exporter/values.yaml
@@ -4,7 +4,7 @@ labels:
   group: "kafka"
 
 # Container Configs
-namespace: kafka-cluster
+namespace: mgramseva
 image:
   repository: "danielqsj/kafka-exporter"
   tag: "latest"
