--- a/deploy-as-code/helm/charts/backbone-services/prometheus-operator/values.yaml
+++ b/deploy-as-code/helm/charts/backbone-services/prometheus-operator/values.yaml
@@ -1753,8 +1753,27 @@ prometheus:
     ##
     ## The scrape configuraiton example below will find master nodes, provided they have the name .*mst.*, relabel the
     ## port to 2379 and allow etcd scraping provided it is running on all Kubernetes master nodes
-    ##
-    additionalScrapeConfigs: []
+    ## 
+    additionalScrapeConfigs: 
+      - job_name: 'blackbox'
+        metrics_path: /probe
+        params:
+          module: [http_2xx]
+        static_configs:
+          - targets:
+              - https://ifix-dwss.psegs.in/
+              - https://metabase-dwss.psegs.in/
+              - https://mgramseva-qa.egov.org.in/
+              - https://mgramseva-uat.psegs.in/
+              - https://ifix-uat.psegs.in/
+              - https://mgramseva-dwss.punjab.gov.in/ # Add your domains here
+        relabel_configs:
+          - source_labels: [__address__]
+            target_label: __param_target
+          - source_labels: [__param_target]
+            target_label: instance
+          - target_label: __address__
+            replacement: prometheus-blackbox-exporter:9115
     # - job_name: kube-etcd
     #   kubernetes_sd_configs:
     #     - role: node
