--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -2,7 +2,7 @@ global:
   domain: mgramseva-dwss.punjab.gov.in
   #containerRegistry: dwssio
   tracing-enabled: true
-  #namespace: mgramseva
+  namespace: mgramseva
   nodepool:
     nodeAffinity: true
     selector: mgramseva-prod-ng
