Update values.yaml (#904)

--- a/deploy-as-code/helm/charts/core-services/egov-notification-sms/values.yaml
+++ b/deploy-as-code/helm/charts/core-services/egov-notification-sms/values.yaml
@@ -6,6 +6,13 @@ labels:
 # Init Containers Configs
 initContainers: {}
 
+initContainers:
+  dbMigration:
+    enabled: true
+    schemaTable: "eg_notification_sms_schema"
+    image:
+      repository: "egov-notification-sms"
+
 # Container Configs
 image:
   repository: "egov-notification-sms"
