Update values.yaml (#906)

--- a/deploy-as-code/helm/charts/core-services/egov-notification-sms/values.yaml
+++ b/deploy-as-code/helm/charts/core-services/egov-notification-sms/values.yaml
@@ -74,6 +74,8 @@ env: |
         key: sms-enabled
   - name: SMS_SENDER
     value: {{ index .Values "sms-sender" | quote }}
+  - name: SAVE_SMS_ENTITY_ENABLED
+    value: {{ index .Values "save-sms-entity-enabled" | quote }}
   - name: SMS_SENDER_REQUESTTYPE
     value: {{ index .Values "sms-sender-requesttype" | quote }}
   {{- if index .Values "sms-custom-config" }}
