Update mgramseva-uat.yaml (#908)

--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -263,6 +263,7 @@ egov-notification-sms:
   sms.default.tmplid: "1"
   sms.debug.msggateway: "true"
   sms.enabled: "true"
+  save-sms-entity-enabled: "true"
 
 egov-user:
   replicas: 2
