--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -13,7 +13,7 @@ cluster-configs:
   namespaces:
     create: true
     values:
-      [ mgramseva , cert-manager , olap, ifix , monitoring ]  
+      [ mgramseva , cert-manager , olap, ifix , monitoring ] 
   db:
     namespace: mgramseva
   root-ingress:
@@ -306,6 +306,7 @@ egov-notification-sms:
   sms-destination-mobile-req-param-name: "mobilenumber"
   sms-message-req-param-name: "message"
   sms-error-codes: "401,403,404,405,406,407,408,409,410,411,412,413,414"
+  save-sms-entity-enabled: "true"
 
 egov-user:
   replicas: 2
