Added java-enable-debug for echallan-services (#910)

--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -192,6 +192,7 @@ echallan-services:
   sms-expenditure-enabled: true
   sms-expenditure-mark-bill-enabled: true
   sms-monthy-summary-enabled: true
+  java-enable-debug: true
 
 ifix-reference-adapter:
   keycloak-credentials-clientid: "ifix-uat"
