--- a/deploy-as-code/helm/charts/backbone-services/prometheus-blackbox-exporter/values.yaml
+++ b/deploy-as-code/helm/charts/backbone-services/prometheus-blackbox-exporter/values.yaml
@@ -128,7 +128,11 @@ tolerations:
 - effect: NoSchedule
   key: dedicated
   operator: Equal
-  value: mgramseva-uat-ng
+  value: mgramseva-qa-ng
+- effect: NoSchedule
+  key: dedicated
+  operator: Equal
+  value: ifix-qa-ng
 affinity: {}
 
 ## Topology spread constraints rely on node labels to identify the topology domain(s) that each Node is in.
