--- a/deploy-as-code/helm/charts/cluster-configs/values.yaml
+++ b/deploy-as-code/helm/charts/cluster-configs/values.yaml
@@ -72,7 +72,7 @@ cluster-configs:
       name: home-isolation-notification-mail
 
     git-sync:
-      namespace: mgramseva
+      namespace: mgramseva , monitoring
       name: git-creds
 
     kibana:
@@ -124,7 +124,7 @@ cluster-configs:
       name: minio
 
     alertmanager:
-      namespace: mgramseva
+      namespace: monitoring
       name: alertmanager-main
 
     jenkins:
