--- a/deploy-as-code/helm/charts/common/templates/_servicemonitor.yaml
+++ b/deploy-as-code/helm/charts/common/templates/_servicemonitor.yaml
@@ -4,11 +4,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ template "common.name" . }}
-{{- if .Values.global.namespace }}
-  namespace: {{ .Values.global.namespace }} 
-{{- else }}   
-  namespace: {{ .Values.namespace }}
-{{- end }}   labels:
+  namespace: {{ .Values.namespace }} 
+  labels:
 {{- include "common.labels" . | nindent 4 }}  
 spec:
   endpoints:
