Update mgramseva-uat.yaml (#927)

--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -187,6 +187,7 @@ ws-services:
   sms-payment-notification-enabled: true
   sms-workflow-enabled: true
   sms-feedback-notification-enabled: true
+  java-enable-debug: true
 
 echallan-services:
   sms-expenditure-enabled: true
