--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -367,7 +367,13 @@ frontend-mgramseva:
       sub_filter  '<head>' '<head>
       <script src=https://s3.ap-south-1.amazonaws.com/mgramseva-uat-assets/firebaseConfigs.js type=text/javascript></script>
       ';"
-      
+
+mgramseva-web:
+  custom-js-injection: |
+    sub_filter.conf: "
+      sub_filter  '<head>' '<head>
+      <script src=https://egov-dev-assets.s3.ap-south-1.amazonaws.com/globalConfigsMgramsewa.js type=text/javascript></script>
+      ';"
 dashboard-analytics:
   config-schema-paths: "file:///work-dir/config-mgramseva/egov-dss-dashboards/dashboard-analytics/*.json"  
   initContainers:
